[package]
name = "helix-win-runner"
version = "0.2.0"
edition = "2021"
authors = [ "Multirious" ]
repository = "https://github.com/Multirious/helix-win-runner"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clipboard-win = { version = "5.0.0", features = ["std"] }
enigo = { git = "https://github.com/enigo-rs/enigo", version = "0.0.14" }
once_cell = "1.17.1"
thiserror = "1.0.39"
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi", "psapi", "winbase", "handleapi"] }
